# social-graph-engine

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  test_output.txt
.github/workflows/: main.yml
backend_cpp/: .gitignore  CMakeLists.txt  data.txt
backend_cpp/.github/workflows/: main.yml
backend_cpp/include/: Graph.h
backend_cpp/src/: AlgoBFS.cpp  AlgoBetweennessCentrality.cpp  AlgoClusteringCoeff.cpp  AlgoConnectedComponents.cpp  AlgoDFS.cpp  AlgoDijkstra.cpp  AlgoGraphStats.cpp  AlgoKCore.cpp  AlgoLPA.cpp  AlgoPageRank.cpp  GraphCore.cpp  main.cpp
backend_cpp/tests/: test_BFS.cpp  test_Betweenness.cpp  test_ClusteringCoeff.cpp  test_ConnectedComponents.cpp  test_Dijkstra.cpp  test_GraphStats.cpp  test_KCore.cpp  test_LPA.cpp  test_PageRank.cpp  test_graph.h  test_main.cpp
frontend_web/: index.html
frontend_web/css/: style.css
frontend_web/js/: api.js  app.js  charts.js  config.js  graphEngine.js
middleware_python/: app_legacy_flask.py.bak  benchmark.py  import_data.py  models.py  requirements.txt  server.py
middleware_python/tests/: conftest.py  test_api.py
middleware_python/utils/: cpp_runner.py
